🔩 Fix Spacing and Cards 🔩

--- a/src/main.scss
+++ b/src/main.scss
@@ -49,7 +49,7 @@
 .main-view-container__scroll-node-child {
     section,
     .contentSpacing {
-        width: 90%;
+        width: 100%;
     }
 }
 
