--- a/src/reset.scss
+++ b/src/reset.scss
@@ -26,7 +26,8 @@ input,
 .main-createPlaylistButton-createPlaylistIcon,
 .cover-art,
 .artist-artistOverview-artistOverviewContent,
-.artist-artistAbout-container {
+.artist-artistAbout-container,
+.view-viewContainer-contentContainer {
     background: transparent;
     background-color: unset !important;
     background-image: unset !important;
